--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,7 @@
     height: 100vh;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(0, 0, 0, .6);
 }
 
 #background-video{
